<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/city_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintVertical_weight="1">


        <Switch
            android:id="@+id/city_pressureSwitch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/city_pressure"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/city_windSpeedSwitch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:showText="false"
            android:text="@string/check_windSpeed"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/city_humiditySwitch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/check_humidity"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_Input"
                android:text=""
                android:textSize="25sp"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <fragment
            android:id="@+id/city_list_fragment"
            android:name="com.example.weatherapp.CityListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_content">

        <Button
            android:id="@+id/city_okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_okButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/city_BackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_backButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>