<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTemperatureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main">

        <TextView
            android:id="@+id/main_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/main_menuButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_add"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_setting1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeed"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintCircle="@id/main_temperature"
            app:layout_constraintCircleAngle="240"
            app:layout_constraintCircleRadius="130dp" />

        <TextView
            android:id="@+id/main_setting3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintCircle="@id/main_temperature"
            app:layout_constraintCircleAngle="180"
            app:layout_constraintCircleRadius="90dp" />

        <TextView
            android:id="@+id/main_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="30sp"
            app:layout_constraintCircle="@id/main_temperature"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="90dp" />

        <TextView
            android:id="@+id/main_setting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintCircle="@id/main_temperature"
            app:layout_constraintCircleAngle="120"
            app:layout_constraintCircleRadius="130dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>