<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_main">

            <TextView
                android:id="@+id/main_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <TextView
                android:id="@+id/main_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="30sp"
                app:layout_constraintCircle="@id/main_temperature"
                app:layout_constraintCircleAngle="0"
                app:layout_constraintCircleRadius="90dp" />

            <!--<ImageView
                android:id="@+id/main_weatherIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@android:color/darker_gray"
                app:layout_constraintCircle="@id/main_temperature"
                app:layout_constraintCircleAngle="180"
                app:layout_constraintCircleRadius="100dp"/>-->
            <TextView
                android:id="@+id/main_setting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed"
                android:textSize="20sp"
                app:layout_constraintCircle="@id/main_temperature"
                app:layout_constraintCircleAngle="240"
                app:layout_constraintCircleRadius="130dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/main_setting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                app:layout_constraintCircle="@id/main_temperature"
                app:layout_constraintCircleAngle="120"
                app:layout_constraintCircleRadius="130dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/main_setting3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="20sp"
                app:layout_constraintCircle="@id/main_temperature"
                app:layout_constraintCircleAngle="180"
                app:layout_constraintCircleRadius="90dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/main_menuButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/ic_menu_add"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/nextDaysView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day1_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_1_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_1_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day1_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day2_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_2_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_2_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day2_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_3_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day3_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_3_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_3_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day3_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_4_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day4_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_4_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_4_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day4_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_5_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day5_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_5_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_5_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day5_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_6_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day6_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_6_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_6_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day6_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/nextDay_7_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day7_name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/nextDay_7_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#0073FF" />

                    <TextView
                        android:id="@+id/nextDay_7_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:text="@string/day7_temp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>